Bean context improvements (#12066)