@@ -25,11 +25,12 @@ import io.micronaut.context.annotation.Primary;
 import io.micronaut.context.annotation.Prototype;
 import io.micronaut.context.annotation.Replaces;
 import io.micronaut.context.annotation.Secondary;
+import io.micronaut.context.beans.BeanDefinitionService;
+import io.micronaut.context.beans.DefaultBeanDefinitionService;
 import io.micronaut.context.condition.ConditionContext;
 import io.micronaut.context.condition.Failure;
 import io.micronaut.context.env.CachedEnvironment;
 import io.micronaut.context.env.PropertyPlaceholderResolver;
-import io.micronaut.context.event.ApplicationEventListener;
 import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.context.event.BeanCreatedEvent;
 import io.micronaut.context.event.BeanCreatedEventListener;
@@ -59,7 +60,6 @@ import io.micronaut.core.annotation.AnnotationClassValue;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.AnnotationMetadataProvider;
 import io.micronaut.core.annotation.AnnotationMetadataResolver;
-import io.micronaut.core.annotation.AnnotationUtil;
 import io.micronaut.core.annotation.AnnotationValue;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NextMajorVersion;
@@ -68,10 +68,7 @@ import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.annotation.UsedByGeneratedCode;
 import io.micronaut.core.convert.DefaultMutableConversionService;
 import io.micronaut.core.convert.MutableConversionService;
-import io.micronaut.core.convert.TypeConverter;
-import io.micronaut.core.convert.TypeConverterRegistrar;
 import io.micronaut.core.convert.value.MutableConvertibleValues;
-import io.micronaut.core.io.ResourceLoader;
 import io.micronaut.core.io.scan.ClassPathResourceLoader;
 import io.micronaut.core.io.service.MicronautMetaServiceLoaderUtils;
 import io.micronaut.core.naming.NameResolver;
@@ -80,6 +77,7 @@ import io.micronaut.core.naming.Named;
 import io.micronaut.core.order.OrderUtil;
 import io.micronaut.core.order.Ordered;
 import io.micronaut.core.reflect.ClassUtils;
+import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.core.type.Argument;
 import io.micronaut.core.type.ReturnType;
 import io.micronaut.core.type.UnsafeExecutable;
@@ -116,7 +114,6 @@ import io.micronaut.inject.qualifiers.Qualified;
 import io.micronaut.inject.qualifiers.Qualifiers;
 import io.micronaut.inject.qualifiers.TypeArgumentQualifier;
 import io.micronaut.inject.validation.BeanDefinitionValidator;
-import jakarta.inject.Singleton;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -142,17 +139,14 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.ForkJoinTask;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReferenceFieldUpdater;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static io.micronaut.core.util.StringUtils.EMPTY_STRING_ARRAY;
+import java.util.stream.StreamSupport;
 
 /**
  * The default context implementations.
@@ -161,7 +155,7 @@ import static io.micronaut.core.util.StringUtils.EMPTY_STRING_ARRAY;
  * @since 1.0
  */
 @Internal
-@NextMajorVersion("Remove public")
+@NextMajorVersion("Remove public in v6")
 @SuppressWarnings("MagicNumber")
 public sealed class DefaultBeanContext implements ConfigurableBeanContext permits DefaultApplicationContext {
 
@@ -170,14 +164,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     private static final String SCOPED_PROXY_ANN = "io.micronaut.runtime.context.scope.ScopedProxy";
     private static final String INTRODUCTION_TYPE = "io.micronaut.aop.Introduction";
     private static final String REPLACES_ANN = Replaces.class.getName();
-    private static final List<Class<?>> KNOWN_INDEX_TYPE = List.of(
-        ResourceLoader.class,
-        TypeConverter.class,
-        TypeConverterRegistrar.class,
-        ApplicationEventListener.class,
-        BeanCreatedEventListener.class,
-        BeanInitializedEventListener.class
-    );
 
     private static final String MSG_COULD_NOT_BE_LOADED = "] could not be loaded: ";
     public static final String MSG_BEAN_DEFINITION = "Bean definition [";
@@ -195,71 +181,53 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     private final BeanContextConfiguration beanContextConfiguration;
 
-    // The collection should be modified only when new bean definition is added
-    // That shouldn't happen that often, so we can use CopyOnWriteArrayList
-    private final Collection<BeanDefinitionProducer> beanDefinitionsClasses = new CopyOnWriteArrayList<>();
-    private final Collection<BeanDefinitionProducer> proxyTargetBeans = new CopyOnWriteArrayList<>();
-
-    private final Map<BeanKey<?>, BeanDefinitionProducer> disabledBeans = new ConcurrentHashMap<>(20);
     private final Map<String, List<String>> disabledConfigurations = new ConcurrentHashMap<>(5);
     private final Map<String, BeanConfiguration> beanConfigurations = new HashMap<>(10);
+
     private final Map<BeanKey, Boolean> containsBeanCache = new ConcurrentHashMap<>(30);
     private final Map<CharSequence, Object> attributes = Collections.synchronizedMap(new HashMap<>(5));
 
     private final Map<BeanKey, CollectionHolder> singletonBeanRegistrations = new ConcurrentHashMap<>(50);
 
     private final Map<BeanCandidateKey, Optional<BeanDefinition>> beanConcreteCandidateCache =
-            new ConcurrentLinkedHashMap.Builder<BeanCandidateKey, Optional<BeanDefinition>>().maximumWeightedCapacity(30).build();
+        new ConcurrentLinkedHashMap.Builder<BeanCandidateKey, Optional<BeanDefinition>>().maximumWeightedCapacity(30).build();
 
     private final Map<BeanCandidateKey, Optional<BeanDefinition>> beanProxyTargetCache =
         new ConcurrentLinkedHashMap.Builder<BeanCandidateKey, Optional<BeanDefinition>>().maximumWeightedCapacity(30).build();
 
     private final Map<Argument, Collection<BeanDefinition>> beanCandidateCache = new ConcurrentLinkedHashMap.Builder<Argument, Collection<BeanDefinition>>().maximumWeightedCapacity(30).build();
 
-    private final Map<Class<?>, Collection<BeanDefinitionProducer>> beanIndex = new ConcurrentHashMap<>(12);
-
     private final ClassLoader classLoader;
     private final Set<Class<?>> thisInterfaces = CollectionUtils.setOf(
-            BeanDefinitionRegistry.class,
-            BeanContext.class,
-            AnnotationMetadataResolver.class,
-            BeanLocator.class,
-            ExecutionHandleLocator.class,
-            ApplicationContext.class,
-            PropertyResolver.class,
-            ValueResolver.class,
-            PropertyPlaceholderResolver.class
+        BeanDefinitionRegistry.class,
+        BeanContext.class,
+        AnnotationMetadataResolver.class,
+        BeanLocator.class,
+        ExecutionHandleLocator.class,
+        ApplicationContext.class,
+        PropertyResolver.class,
+        ValueResolver.class,
+        PropertyPlaceholderResolver.class
     );
-    private final Function<Class<?>, Collection<BeanDefinitionProducer>> COMPUTE_INDEXES_FN = new Function<Class<?>, Collection<BeanDefinitionProducer>>() {
-        // Keep an anonymous class for performance
-        @Override
-        public Collection<BeanDefinitionProducer> apply(Class<?> indexedType) {
-            return new ArrayList<>(20);
-        }
-    };
+
     private final CustomScopeRegistry customScopeRegistry;
-    private final String[] eagerInitStereotypes;
-    private final boolean eagerInitStereotypesPresent;
-    private final boolean eagerInitSingletons;
 
     private BeanDefinitionValidator beanValidator;
-    private List<BeanDefinitionReference> beanDefinitionReferences;
     private List<BeanConfiguration> beanConfigurationsList;
-
-    private StartupBeans startupBeans;
 
     List<Map.Entry<Class<?>, ListenersSupplier<BeanInitializedEventListener>>> beanInitializedEventListeners;
     private List<Map.Entry<Class<?>, ListenersSupplier<BeanCreatedEventListener>>> beanCreationEventListeners;
     private List<Map.Entry<Class<?>, ListenersSupplier<BeanPreDestroyEventListener>>> beanPreDestroyEventListeners;
     private List<Map.Entry<Class<?>, ListenersSupplier<BeanDestroyedEventListener>>> beanDestroyedEventListeners;
 
-    private final BeanDefinitionsProvider beanDefinitionReferencesProvider;
-    @Nullable
-    private final Predicate<QualifiedBeanType<?>> beansPredicate;
     private final boolean eventsEnabled;
     private final boolean eagerBeansEnabled;
 
+    private ForkJoinTask<?> checkEnabledBeans;
+
     protected MutableConversionService conversionService;
+
+    protected final BeanDefinitionService beanDefinitionProvider;
 
     /**
      * Construct a new bean context using the same classloader that loaded this DefaultBeanContext class.
@@ -316,19 +284,15 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         for (Class<? extends Annotation> ann : eagerInitAnnotated) {
             configuredEagerSingletonAnnotations.add(ann.getName());
         }
-        this.eagerInitStereotypes = configuredEagerSingletonAnnotations.toArray(EMPTY_STRING_ARRAY);
-        this.eagerInitStereotypesPresent = !configuredEagerSingletonAnnotations.isEmpty();
-        this.eagerInitSingletons = eagerInitStereotypesPresent && (configuredEagerSingletonAnnotations.contains(AnnotationUtil.SINGLETON) || configuredEagerSingletonAnnotations.contains(Singleton.class.getName()));
         this.beanContextConfiguration = contextConfiguration;
         BeanResolutionTraceConfiguration traceConfiguration = beanContextConfiguration
             .getTraceConfiguration();
         this.traceMode = traceConfiguration.mode();
         this.tracePatterns = traceConfiguration.classPatterns();
-        this.beansPredicate = contextConfiguration.beansPredicate();
         this.eventsEnabled = contextConfiguration.eventsEnabled();
         this.eagerBeansEnabled = contextConfiguration.eagerBeansEnabled();
-        this.beanDefinitionReferencesProvider = contextConfiguration.getBeanDefinitionsProvider();
         this.conversionService = new DefaultMutableConversionService();
+        beanDefinitionProvider = new DefaultBeanDefinitionService(beanContextConfiguration);
     }
 
     /**
@@ -371,11 +335,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                 configureAndStartContext();
                 if (LOG.isDebugEnabled()) {
                     String activeConfigurations = beanConfigurations
-                            .values()
-                            .stream()
-                            .filter(config -> config.isEnabled(this))
-                            .map(BeanConfiguration::getName)
-                            .collect(Collectors.joining(","));
+                        .values()
+                        .stream()
+                        .filter(config -> config.isEnabled(this))
+                        .map(BeanConfiguration::getName)
+                        .collect(Collectors.joining(","));
                     if (StringUtils.isNotEmpty(activeConfigurations)) {
                         LOG.debug("Loaded active configurations: {}", activeConfigurations);
                     }
@@ -396,33 +360,21 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
      */
     protected void registerConversionService() {
         //noinspection resource
-        registerSingleton(MutableConversionService.class, conversionService,  null, false);
+        registerSingleton(MutableConversionService.class, conversionService, null, false);
     }
 
     /**
      * Tracks when a bean or configuration is disabled.
+     *
      * @param conditionContext The conditional context
-     * @param <C> The component type
+     * @param <C>              The component type
      */
     @Internal
     <C extends AnnotationMetadataProvider> void trackDisabledComponent(@NonNull ConditionContext<C> conditionContext) {
         C component = conditionContext.getComponent();
         List<String> reasons = conditionContext.getFailures().stream().map(Failure::getMessage).toList();
         if (component instanceof QualifiedBeanType<?> beanType) {
-            try {
-                @SuppressWarnings("unchecked")
-                Argument<Object> argument = (Argument<Object>) beanType.getGenericBeanType();
-                @SuppressWarnings("unchecked")
-                Qualifier<Object> declaredQualifier = (Qualifier<Object>) beanType.getDeclaredQualifier();
-                this.disabledBeans.put(new BeanKey<>(argument, declaredQualifier), new BeanDefinitionProducer(new DisabledBean<>(
-                    argument,
-                    declaredQualifier,
-                    reasons
-                )));
-            } catch (Exception | NoClassDefFoundError e) {
-                // it is theoretically possible that resolving the generic type results in an error
-                // in this case just ignore this as the maps built here are purely to aid error diagnosis
-            }
+            beanDefinitionProvider.trackDisabled(beanType, reasons);
         } else if (component instanceof BeanConfiguration configuration) {
             this.disabledConfigurations.put(configuration.getName(), reasons);
         }
@@ -445,7 +397,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             List<BeanRegistration> objects = topologicalSort(singletonScope.getBeanRegistrations());
 
             Map<Boolean, List<BeanRegistration>> result = objects.stream().collect(Collectors.groupingBy(br -> br.bean != null
-                    && (br.bean instanceof BeanPreDestroyEventListener || br.bean instanceof BeanDestroyedEventListener)));
+                && (br.bean instanceof BeanPreDestroyEventListener || br.bean instanceof BeanDestroyedEventListener)));
 
             List<BeanRegistration> listeners = result.get(true);
             if (listeners != null) {
@@ -477,6 +429,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                 }
             }
 
+            if (checkEnabledBeans != null) {
+                checkEnabledBeans.cancel(true);
+            }
+
             singlesInCreation.clear();
             singletonBeanRegistrations.clear();
             beanConcreteCandidateCache.clear();
@@ -486,18 +442,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             beanConfigurations.clear();
             disabledConfigurations.clear();
             singletonScope.clear();
-            beanDefinitionsClasses.clear();
-            disabledBeans.clear();
-            proxyTargetBeans.clear();
             attributes.clear();
-            beanIndex.clear();
-            beanConfigurationsList = null;
-            beanDefinitionReferences = null;
             beanInitializedEventListeners = null;
             beanCreationEventListeners = null;
             beanPreDestroyEventListeners = null;
             beanDestroyedEventListeners = null;
-            startupBeans = null;
             terminating.set(false);
             running.set(false);
             configured.set(false);
@@ -506,6 +455,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                     tracer.traceContextShutdown(this);
                 });
             }
+            beanDefinitionProvider.reset();
         }
         return this;
     }
@@ -517,8 +467,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             return AnnotationMetadata.EMPTY_METADATA;
         }
         return findBeanDefinitionInternal(Argument.of(type), null)
-                .map(AnnotationMetadataProvider::getAnnotationMetadata)
-                .orElse(AnnotationMetadata.EMPTY_METADATA);
+            .map(AnnotationMetadataProvider::getAnnotationMetadata)
+            .orElse(AnnotationMetadata.EMPTY_METADATA);
     }
 
     @Override
@@ -586,18 +536,18 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     @Override
     public <T> Collection<BeanRegistration<T>> getBeanRegistrations(Argument<T> beanType, Qualifier<T> qualifier) {
         return getBeanRegistrations(
-                null,
-                Objects.requireNonNull(beanType, "Bean type cannot be null"),
-                qualifier
+            null,
+            Objects.requireNonNull(beanType, "Bean type cannot be null"),
+            qualifier
         );
     }
 
     @Override
     public <T> BeanRegistration<T> getBeanRegistration(Argument<T> beanType, Qualifier<T> qualifier) {
         return getBeanRegistration(
-                null,
-                Objects.requireNonNull(beanType, "Bean type cannot be null"),
-                qualifier
+            null,
+            Objects.requireNonNull(beanType, "Bean type cannot be null"),
+            qualifier
         );
     }
 
@@ -681,18 +631,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     @Override
     public <T, R> Optional<MethodExecutionHandle<T, R>> findExecutionHandle(T bean, String method, Class<?>[] arguments) {
         if (bean != null) {
-            Optional<? extends BeanDefinition<?>> foundBean = findBeanDefinition(bean.getClass());
-            if (foundBean.isPresent()) {
-                BeanDefinition<?> beanDefinition = foundBean.get();
-                Optional<? extends ExecutableMethod<?, Object>> foundMethod = beanDefinition.findMethod(method, arguments);
-                if (foundMethod.isPresent()) {
-                    return foundMethod.map((ExecutableMethod executableMethod) -> new ObjectExecutionHandle<>(bean, executableMethod));
-                } else {
-                    return beanDefinition.findPossibleMethods(method)
-                            .findFirst()
-                            .map((ExecutableMethod executableMethod) -> new ObjectExecutionHandle<>(bean, executableMethod));
-                }
-            }
+            Class<T> aClass = (Class<T>) bean.getClass();
+            return findExecutionHandle(aClass, method, arguments);
         }
         return Optional.empty();
     }
@@ -713,28 +653,28 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             beanDefinition = null;
         }
         if (beanDefinition != null && !(beanDefinition instanceof RuntimeBeanDefinition<T>) && beanDefinition.getBeanType().isInstance(singleton)) {
-            try (BeanResolutionContext context = newResolutionContext(beanDefinition, null)) {
-                if (inject) {
+            if (inject) {
+                try (BeanResolutionContext context = newResolutionContext(beanDefinition, null)) {
                     doInjectAndInitialize(context, singleton, beanDefinition);
                 }
-                DefaultBeanContext.BeanKey<T> key = new DefaultBeanContext.BeanKey<>(beanDefinition.asArgument(), qualifier);
-                singletonScope.registerSingletonBean(BeanRegistration.of(this, key, beanDefinition, singleton), qualifier);
             }
         } else {
             RuntimeBeanDefinition<T> runtimeBeanDefinition = RuntimeBeanDefinition.builder(type, () -> singleton)
                 .singleton(true)
+                .exposedTypes(ReflectionUtils.getAllClassesInHierarchy(type).toArray(Class<?>[]::new))
                 .qualifier(qualifier)
                 .build();
 
-            var registration = BeanRegistration.of(
-                this,
-                new BeanKey<>(runtimeBeanDefinition, qualifier),
-                runtimeBeanDefinition,
-                singleton
-            );
-            singletonScope.registerSingletonBean(registration, qualifier);
             registerBeanDefinition(runtimeBeanDefinition);
+            beanDefinition = runtimeBeanDefinition;
         }
+        var registration = BeanRegistration.of(
+            this,
+            new BeanKey<>(beanDefinition, qualifier),
+            beanDefinition,
+            singleton
+        );
+        singletonScope.registerSingletonBean(registration, qualifier);
         return this;
     }
 
@@ -769,7 +709,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     @Override
     public Optional<BeanConfiguration> findBeanConfiguration(String configurationName) {
-        BeanConfiguration configuration = this.beanConfigurations.get(configurationName);
+        BeanConfiguration configuration = beanConfigurations.get(configurationName);
         if (configuration != null) {
             return Optional.of(configuration);
         } else {
@@ -780,7 +720,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     @Override
     public <T> BeanDefinition<T> getBeanDefinition(Argument<T> beanType, Qualifier<T> qualifier) {
         return findBeanDefinition(beanType, qualifier)
-                .orElseThrow(() -> newNoSuchBeanException(null, beanType, qualifier, null));
+            .orElseThrow(() -> newNoSuchBeanException(null, beanType, qualifier, null));
     }
 
     @Override
@@ -842,7 +782,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             return containsBeanCache.get(beanKey);
         } else {
             boolean result = singletonScope.containsBean(beanType, qualifier) ||
-                    isCandidatePresent(beanKey.beanType, qualifier);
+                isCandidatePresent(beanKey.beanType, qualifier);
 
             containsBeanCache.put(beanKey, result);
             return result;
@@ -942,10 +882,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     /**
      * Obtains a map of beans of the given type and qualifier.
-     * @param resolutionContext  The resolution context
-     * @param beanType           The bean type
-     * @param qualifier          The qualifier
-     * @param <V>                The bean type
+     *
+     * @param resolutionContext The resolution context
+     * @param beanType          The bean type
+     * @param qualifier         The qualifier
+     * @param <V>               The bean type
      * @return A map of beans, never {@code null}.
      * @since 4.0.0
      */
@@ -1010,7 +951,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     public <T> Stream<T> streamOfType(BeanResolutionContext resolutionContext, Argument<T> beanType, Qualifier<T> qualifier) {
         Objects.requireNonNull(beanType, "Bean type cannot be null");
         return getBeanRegistrations(resolutionContext, beanType, qualifier).stream()
-                .map(BeanRegistration::getBean);
+            .map(BeanRegistration::getBean);
     }
 
     @NonNull
@@ -1138,7 +1079,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                             argumentValues.put(requiredArgument.getName(), val);
                         } else {
                             argumentValues.put(requiredArgument.getName(), conversionService.convert(val, requiredArgument).orElseThrow(() ->
-                                    new BeanInstantiationException(resolutionContext, "Invalid bean @Argument [" + requiredArgument + "]. Cannot convert object [" + val + "] to required type: " + argumentType)
+                                new BeanInstantiationException(resolutionContext, "Invalid bean @Argument [" + requiredArgument + "]. Cannot convert object [" + val + "] to required type: " + argumentType)
                             ));
                         }
                     } else if (!requiredArgument.isDeclaredNullable()) {
@@ -1163,8 +1104,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     public <T> T destroyBean(@NonNull Argument<T> beanType, Qualifier<T> qualifier) {
         ArgumentUtils.requireNonNull("beanType", beanType);
         return findBeanDefinition(beanType, qualifier)
-                .map(this::destroyBean)
-                .orElse(null);
+            .map(this::destroyBean)
+            .orElse(null);
     }
 
     @Override
@@ -1266,9 +1207,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     /**
      * Destroy a lifecycle bean.
-     * @param cycle The cycle
+     *
+     * @param cycle      The cycle
      * @param definition The definition
-     * @param <T> The bean type
+     * @param <T>        The bean type
      */
     @Internal
     protected <T> void destroyLifeCycleBean(LifeCycle<?> cycle, BeanDefinition<T> definition) {
@@ -1279,7 +1221,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         }
     }
 
-    @SuppressWarnings("unchecked") @NonNull
+    @SuppressWarnings("unchecked")
+    @NonNull
     private <T> T triggerPreDestroyListeners(@NonNull BeanDefinition<T> beanDefinition, @NonNull T bean) {
         if (beanPreDestroyEventListeners == null) {
             beanPreDestroyEventListeners = loadBeanEventListeners(BeanPreDestroyEventListener.class);
@@ -1324,7 +1267,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             }
         }
         BeanDefinition<T> proxyTargetBeanDefinition = findProxyTargetBeanDefinition(registration.beanDefinition)
-                .orElseThrow(() -> new IllegalStateException("Cannot find a proxy target bean definition for: " + registration.beanDefinition));
+            .orElseThrow(() -> new IllegalStateException("Cannot find a proxy target bean definition for: " + registration.beanDefinition));
         Optional<CustomScope<?>> declaredScope = customScopeRegistry.findDeclaredScope(proxyTargetBeanDefinition);
         if (declaredScope.isEmpty()) {
             if (proxyTargetBeanDefinition.isSingleton()) {
@@ -1339,10 +1282,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                         return;
                     }
                     destroyBean(BeanRegistration.of(this,
-                            new BeanKey<>(proxyTargetBeanDefinition, proxyTargetBeanDefinition.getDeclaredQualifier()),
-                            proxyTargetBeanDefinition,
-                            interceptedTarget,
-                            registration instanceof BeanDisposingRegistration ? ((BeanDisposingRegistration<T>) registration).getDependents() : null
+                        new BeanKey<>(proxyTargetBeanDefinition, proxyTargetBeanDefinition.getDeclaredQualifier()),
+                        proxyTargetBeanDefinition,
+                        interceptedTarget,
+                        registration instanceof BeanDisposingRegistration ? ((BeanDisposingRegistration<T>) registration).getDependents() : null
                     ));
                 }
             }
@@ -1609,123 +1552,70 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         return beanDefinition;
     }
 
-    @SuppressWarnings("unchecked")
     @NonNull
     @Override
-    public Collection<BeanDefinition<?>> getBeanDefinitions(@Nullable Qualifier<Object> qualifier) {
+    public Collection<BeanDefinition<Object>> getBeanDefinitions(@Nullable Qualifier<Object> qualifier) {
         if (qualifier == null) {
             return Collections.emptyList();
         }
         if (LOG.isDebugEnabled()) {
             LOG.debug("Finding candidate beans for qualifier: {}", qualifier);
         }
-        // first traverse component definition classes and load candidates
-        if (beanDefinitionsClasses.isEmpty()) {
-            return Collections.emptyList();
-        }
         Collection<BeanDefinition<Object>> candidates;
         if (qualifier instanceof FilteringQualifier<Object> filteringQualifier) {
-            List<BeanDefinition<Object>> bdCandidates = new ArrayList<>(20);
-            for (BeanDefinitionProducer producer : beanDefinitionsClasses) {
-                BeanDefinitionReference<Object> reference = producer.getReferenceIfEnabled(this);
-                if (reference == null) {
-                    continue;
+            // Keep anonymous
+            Predicate<BeanDefinitionReference<Object>> predicate = new Predicate<>() {
+                @Override
+                public boolean test(BeanDefinitionReference<Object> qbt) {
+                    return filteringQualifier.doesQualify(Object.class, qbt);
                 }
-                if (!filteringQualifier.doesQualify(Object.class, reference)) {
-                    continue;
-                }
-                BeanDefinition<Object> beanDefinition = reference.load(this);
-                if (!beanDefinition.isEnabled(this)) {
-                    continue;
-                }
-                if (!filteringQualifier.doesQualify(Object.class, beanDefinition)) {
-                    continue;
-                }
-                bdCandidates.add(beanDefinition);
-            }
-            candidates = bdCandidates;
+            };
+            candidates = beanDefinitionProvider.getBeanDefinitions(this, predicate, null);
         } else {
-            Stream<BeanDefinitionReference<Object>> reduced = qualifier.reduce(Object.class, beanDefinitionsClasses.stream()
-                .map(p -> p.getReferenceIfEnabled(this))
-                .filter(Objects::nonNull));
-            Stream<BeanDefinition<Object>> candidateStream = qualifier.reduce(Object.class,
-                reduced
-                    .map(ref -> ref.load(this))
-                    .filter(candidate -> candidate.isEnabled(this))
-            );
-            candidates = candidateStream.collect(Collectors.toList());
+            Stream<BeanDefinition<Object>> beanDefinitionsClasses = StreamSupport.stream(
+                beanDefinitionProvider.getBeanDefinitions(this, Argument.OBJECT_ARGUMENT, null, null).spliterator(),
+                false);
+            candidates = qualifier.reduce(Object.class, beanDefinitionsClasses)
+                .toList();
         }
 
-        if (!candidates.isEmpty()) {
-            filterReplacedBeans(null, candidates);
-        }
-        return (Collection) candidates;
+        filterReplacedBeans(null, candidates);
+        return candidates;
     }
 
-    @SuppressWarnings("unchecked")
     @NonNull
     @Override
-    public Collection<BeanDefinition<?>> getAllBeanDefinitions() {
+    public Collection<BeanDefinition<Object>> getAllBeanDefinitions() {
         if (LOG.isDebugEnabled()) {
             LOG.debug("Finding all bean definitions");
         }
-
-        if (!beanDefinitionsClasses.isEmpty()) {
-            return beanDefinitionsClasses
-                    .stream()
-                    .map(p -> p.getDefinitionIfEnabled(this))
-                    .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
-        }
-
-        return (Collection<BeanDefinition<?>>) Collections.emptyMap();
+        return beanDefinitionProvider.getBeanDefinitions(this, null);
     }
 
     @Override
     public Collection<DisabledBean<?>> getDisabledBeans() {
-        return disabledBeans.values().stream()
-            .map(producer -> (DisabledBean<?>) producer.reference)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+        return beanDefinitionProvider.getDisabledBeans(this);
     }
 
-    @SuppressWarnings("unchecked")
     @NonNull
     @Override
-    public Collection<BeanDefinitionReference<?>> getBeanDefinitionReferences() {
-        if (!beanDefinitionsClasses.isEmpty()) {
-            final List refs = beanDefinitionsClasses.stream()
-                    .map(p -> p.getReferenceIfEnabled(this))
-                    .filter(Objects::nonNull)
-                    .toList();
-
-            return refs;
-        }
-        return Collections.emptyList();
+    public Collection<BeanDefinitionReference<Object>> getBeanDefinitionReferences() {
+        return beanDefinitionProvider.getBeanReferences();
     }
 
     @Override
     public BeanContext registerBeanConfiguration(BeanConfiguration configuration) {
         Objects.requireNonNull(configuration, "Configuration cannot be null");
         this.beanConfigurations.put(configuration.getName(), configuration);
+        beanDefinitionProvider.registerConfiguration(configuration);
         return this;
     }
 
     @Override
     @NonNull
     public <B> BeanContext registerBeanDefinition(@NonNull RuntimeBeanDefinition<B> definition) {
-        Objects.requireNonNull(definition, "Bean definition cannot be null");
-        Class<B> beanType = definition.getBeanType();
-        BeanDefinitionProducer producer = new BeanDefinitionProducer(definition);
-        this.beanDefinitionsClasses.add(producer);
-        for (Class<?> indexedType : beanIndex.keySet()) {
-            if (indexedType == beanType || indexedType.isAssignableFrom(beanType)) {
-                final Collection<BeanDefinitionProducer> indexed = resolveTypeIndex(indexedType);
-                indexed.add(producer);
-                break;
-            }
-        }
-        purgeCacheForBeanType(beanType);
+        beanDefinitionProvider.addBeanDefinition(definition);
+        purgeCacheForBeanType(definition.getBeanType());
         return this;
     }
 
@@ -1734,24 +1624,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         beanConcreteCandidateCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
         singletonBeanRegistrations.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
         containsBeanCache.entrySet().removeIf(entry -> entry.getKey().beanType.isAssignableFrom(beanType));
-    }
-
-    /**
-     * The definition to remove.
-     * @param definition The definition to remove
-     * @param <B> The bean type
-     */
-    @Internal
-    <B> void removeBeanDefinition(RuntimeBeanDefinition<B> definition) {
-        Class<B> beanType = definition.getBeanType();
-        for (Class<?> indexedType : beanIndex.keySet()) {
-            if (indexedType == beanType || indexedType.isAssignableFrom(beanType)) {
-                resolveTypeIndex(indexedType).forEach(p -> p.disableIfMatch(definition));
-                break;
-            }
-        }
-        beanDefinitionsClasses.forEach(p -> p.disableIfMatch(definition));
-        purgeCacheForBeanType(definition.getBeanType());
     }
 
     /**
@@ -1910,13 +1782,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     @NonNull
     @Override
-    public <T> Optional<BeanDefinition<T>> findProxyBeanDefinition(@NonNull Class<T> beanType, @Nullable Qualifier<T> qualifier) {
-        ArgumentUtils.requireNonNull("beanType", beanType);
-        return findProxyBeanDefinition(Argument.of(beanType), qualifier);
-    }
-
-    @NonNull
-    @Override
     public <T> Optional<BeanDefinition<T>> findProxyBeanDefinition(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         ArgumentUtils.requireNonNull("beanType", beanType);
         for (BeanDefinition<T> beanDefinition : getBeanDefinitions(beanType, qualifier)) {
@@ -1935,29 +1800,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         beanCandidateCache.clear();
         beanConcreteCandidateCache.clear();
         singletonBeanRegistrations.clear();
-    }
-
-    /**
-     * Resolves the {@link BeanDefinitionReference} class instances. Default implementation uses ServiceLoader pattern.
-     *
-     * @return The bean definition classes
-     */
-    @NonNull
-    protected List<BeanDefinitionReference> resolveBeanDefinitionReferences() {
-        if (beanDefinitionReferences == null) {
-            List<BeanDefinitionReference<?>> refs = beanDefinitionReferencesProvider.provide(classLoader);
-            if (beansPredicate != null) {
-                List<BeanDefinitionReference<?>> list = new ArrayList<>(refs.size());
-                for (BeanDefinitionReference<?> ref : refs) {
-                    if (beansPredicate.test(ref)) {
-                        list.add(ref);
-                    }
-                }
-                refs = list;
-            }
-            beanDefinitionReferences = (List) refs;
-        }
-        return beanDefinitionReferences;
     }
 
     /**
@@ -2015,31 +1857,28 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                 argument = Argument.OBJECT_ARGUMENT;
             }
             typeToListener.computeIfAbsent(argument.getType(), aClass -> new ArrayList<>(10))
-                    .add(beanCreatedDefinition);
+                .add(beanCreatedDefinition);
         }
         return typeToListener;
     }
 
-    private void initializeContext(
-            @NonNull List<BeanDefinitionProducer> eagerInitBeans,
-            @NonNull List<BeanDefinitionProducer> processedBeans,
-            @NonNull List<BeanDefinitionProducer> parallelBeans) {
+    private void initializeContext() {
         if (!eagerBeansEnabled) {
             return;
         }
-        if (CollectionUtils.isNotEmpty(eagerInitBeans)) {
-            final List<BeanDefinition<Object>> eagerInit = new ArrayList<>(eagerInitBeans.size());
-            for (BeanDefinitionProducer contextScopeBean : eagerInitBeans) {
+        Iterable<BeanDefinition<Object>> eagerInitBeans = beanDefinitionProvider.getEagerInitBeans(this);
+        if (eagerInitBeans.iterator().hasNext()) {
+            final List<BeanDefinition<Object>> eagerInit = new ArrayList<>(20);
+            for (BeanDefinition<Object> contextScopeBean : eagerInitBeans) {
                 try {
                     loadEagerBeans(contextScopeBean, eagerInit);
                 } catch (Throwable e) {
-                    BeanDefinitionReference<?> ref = contextScopeBean.getReferenceBestEffort();
-                    throw new BeanInstantiationException(MSG_BEAN_DEFINITION + (ref == null ? "<ref discarded>" : ref.getName()) + MSG_COULD_NOT_BE_LOADED + e.getMessage(), e);
+                    throw new BeanInstantiationException(MSG_BEAN_DEFINITION + (contextScopeBean.getName()) + MSG_COULD_NOT_BE_LOADED + e.getMessage(), e);
                 }
             }
             filterReplacedBeans(null, eagerInit);
             OrderUtil.sortOrdered(eagerInit);
-            for (BeanDefinition eagerInitDefinition : eagerInit) {
+            for (BeanDefinition<Object> eagerInitDefinition : eagerInit) {
                 try {
                     initializeEagerBean(eagerInitDefinition);
                 } catch (DisabledBeanException e) {
@@ -2052,13 +1891,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             }
         }
 
-        if (!processedBeans.isEmpty()) {
+        Iterable<BeanDefinition<Object>> processedBeans = beanDefinitionProvider.getProcessedBeans(this);
+        if (processedBeans.iterator().hasNext()) {
             List<BeanDefinitionMethodReference<Object, Object>> methodsToProcess = new ArrayList<>();
-            for (BeanDefinitionProducer processedBeanProducer : processedBeans) {
-                BeanDefinition<Object> definition = processedBeanProducer.getDefinitionIfEnabled(this);
-                if (definition == null) {
-                    continue;
-                }
+            for (BeanDefinition<Object> definition : processedBeans) {
                 for (ExecutableMethod<Object, ?> method : definition.getExecutableMethods()) {
                     if (method.hasStereotype(Executable.class)) {
                         methodsToProcess.add(BeanDefinitionMethodReference.of(definition, (ExecutableMethod<Object, Object>) method));
@@ -2125,10 +1961,28 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             }
         }
 
-        if (CollectionUtils.isNotEmpty(parallelBeans)) {
-            processParallelBeans(parallelBeans);
-        }
-        ForkJoinPool.commonPool().execute(() -> beanDefinitionsClasses.forEach(p -> p.getReferenceIfEnabled(this)));
+        processParallelBeans();
+        checkEnabledBeans = ForkJoinPool.commonPool().submit(new ForkJoinTask<>() {
+
+            @Override
+            public Object getRawResult() {
+                return null;
+            }
+
+            @Override
+            protected void setRawResult(Object value) {
+            }
+
+            @Override
+            protected boolean exec() {
+                for (BeanDefinitionReference<Object> ignore : beanDefinitionProvider.getBeanReferences(DefaultBeanContext.this)) {
+                    if (isCancelled()) {
+                        return true;
+                    }
+                }
+                return true;
+            }
+        });
     }
 
     /**
@@ -2143,8 +1997,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     @NonNull
     @Internal
     public final <T> Collection<BeanDefinition<T>> findBeanCandidates(@Nullable BeanResolutionContext resolutionContext,
-                                                                   @NonNull Argument<T> beanType,
-                                                                   @Nullable BeanDefinition<?> filter) {
+                                                                      @NonNull Argument<T> beanType,
+                                                                      @Nullable BeanDefinition<?> filter) {
         Predicate<BeanDefinition<T>> predicate = filter == null ? null : definition -> !definition.equals(filter);
         return findBeanCandidates(resolutionContext, beanType, true, predicate);
     }
@@ -2168,13 +2022,17 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         if (LOG.isDebugEnabled()) {
             LOG.debug("Finding candidate beans for type: {}", beanType);
         }
-
+        Iterable<BeanDefinition<T>> beanDefinitions;
+        if (resolutionContext == null) {
+            beanDefinitions = beanDefinitionProvider.getBeanDefinitions(this, beanType, null, predicate);
+        } else {
+            beanDefinitions = beanDefinitionProvider.getBeanDefinitions(resolutionContext, beanType, null, predicate);
+        }
         return collectBeanCandidates(
             resolutionContext,
             beanType,
             collectIterables,
-            predicate,
-            beanIndex.getOrDefault(beanType.getType(), beanDefinitionsClasses)
+            beanDefinitions
         );
     }
 
@@ -2183,32 +2041,21 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         BeanResolutionContext resolutionContext,
         Argument<T> beanType,
         boolean collectIterables,
-        @Nullable
-        Predicate<BeanDefinition<T>> predicate,
-        Collection<BeanDefinitionProducer> beanDefinitionProducers) {
+        Iterable<BeanDefinition<T>> beanDefinitions) {
+
+        Iterator<BeanDefinition<T>> iterator = beanDefinitions.iterator();
         Set<BeanDefinition<T>> candidates;
-        if (!beanDefinitionProducers.isEmpty()) {
-
+        if (iterator.hasNext()) {
             candidates = new HashSet<>();
-            for (BeanDefinitionProducer producer : beanDefinitionProducers) {
-                if (producer.isDisabledOptimistic() || !producer.isReferenceCandidateBean(beanType)) {
-                    continue;
-                }
-                BeanDefinition<T> loadedBean = producer.getDefinitionIfEnabled(this, null, beanType, predicate);
-                if (loadedBean == null) {
-                    continue;
-                }
-
-                if (collectIterables && loadedBean.isConfigurationProperties()) {
-                    collectIterableBeans(resolutionContext, loadedBean, candidates, beanType);
+            while (iterator.hasNext()) {
+                BeanDefinition<T> candidate = iterator.next();
+                if (collectIterables && candidate.isConfigurationProperties()) {
+                    collectIterableBeans(resolutionContext, candidate, candidates, beanType);
                 } else {
-                    candidates.add(loadedBean);
+                    candidates.add(candidate);
                 }
             }
-
-            if (!candidates.isEmpty()) {
-                filterReplacedBeans(resolutionContext, candidates);
-            }
+            filterReplacedBeans(resolutionContext, candidates);
         } else {
             candidates = Collections.emptySet();
         }
@@ -2227,11 +2074,12 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     /**
      * Collects iterable beans from a given iterable.
+     *
      * @param resolutionContext The resolution context
-     * @param iterableBean The iterable
-     * @param targetSet The target set
-     * @param beanType The bean type
-     * @param <T> The bean type
+     * @param iterableBean      The iterable
+     * @param targetSet         The target set
+     * @param beanType          The bean type
+     * @param <T>               The bean type
      */
     protected <T> void collectIterableBeans(@Nullable BeanResolutionContext resolutionContext,
                                             @NonNull BeanDefinition<T> iterableBean,
@@ -2253,57 +2101,44 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         if (LOG.isDebugEnabled()) {
             LOG.debug("Finding candidate beans for instance: {}", instance);
         }
-        Collection<BeanDefinitionProducer> beanProducers = this.beanDefinitionsClasses;
         final Class<?> beanClass = instance.getClass();
         Argument<?> beanType = Argument.of(beanClass);
         Collection<BeanDefinition<T>> beanDefinitions = (Collection<BeanDefinition<T>>) ((Map) beanCandidateCache).get(beanType);
         if (beanDefinitions != null) {
             return beanDefinitions;
         }
-        // first traverse component definition classes and load candidates
-        if (!beanDefinitionsClasses.isEmpty()) {
-            List<BeanDefinition<T>> candidates = new ArrayList<>();
-            for (BeanDefinitionProducer producer : beanProducers) {
-                if (producer.isDisabledOptimistic()) {
-                    continue;
+        java.lang.Iterable<BeanDefinition<Object>> iterable = beanDefinitionProvider.getBeanDefinitions(
+            this,
+            Argument.OBJECT_ARGUMENT,
+            ref -> ref.getBeanType().isInstance(instance),
+            null
+        );
+        Iterator<BeanDefinition<Object>> iterator = iterable.iterator();
+        List<BeanDefinition<T>> candidates;
+        if (iterator.hasNext()) {
+            // try narrow to exact type
+            List<BeanDefinition<T>> list = new ArrayList<>(2);
+            while (iterator.hasNext()) {
+                BeanDefinition<Object> beanDefinition = iterator.next();
+                if (beanDefinition.getBeanType() == beanClass) {
+                    list.add((BeanDefinition<T>) beanDefinition);
                 }
-                BeanDefinitionReference<T> reference = producer.getReferenceIfEnabled(this);
-                if (reference == null) {
-                    continue;
-                }
-                Class<?> candidateType = reference.getBeanType();
-                if (candidateType == null || !candidateType.isInstance(instance)) {
-                    continue;
-                }
-                BeanDefinition<T> candidate = producer.getDefinitionIfEnabled(this);
-                if (candidate == null) {
-                    continue;
-                }
-                candidates.add(candidate);
             }
-
-            if (candidates.size() > 1) {
-                // try narrow to exact type
-                List<BeanDefinition<T>> list = new ArrayList<>(2);
-                for (BeanDefinition<T> candidate : candidates) {
-                    if (candidate.getBeanType() == beanClass) {
-                        list.add(candidate);
-                    }
-                }
-                candidates = list;
-            }
+            candidates = list;
+        } else {
+            candidates = List.of();
+        }
+        if (!candidates.isEmpty()) {
             if (LOG.isDebugEnabled()) {
                 LOG.debug("Resolved bean candidates {} for instance: {}", candidates, instance);
             }
-            beanDefinitions = candidates;
         } else {
             if (LOG.isDebugEnabled()) {
                 LOG.debug("No bean candidates found for instance: {}", instance);
             }
-            beanDefinitions = Collections.emptySet();
         }
-        beanCandidateCache.put(beanType, (Collection) beanDefinitions);
-        return beanDefinitions;
+        beanCandidateCache.put(beanType, (Collection) candidates);
+        return candidates;
     }
 
     /**
@@ -2314,6 +2149,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     protected synchronized void registerConfiguration(@NonNull BeanConfiguration configuration) {
         ArgumentUtils.requireNonNull("configuration", configuration);
         beanConfigurations.put(configuration.getName(), configuration);
+        beanDefinitionProvider.registerConfiguration(configuration);
     }
 
     @NonNull
@@ -2342,7 +2178,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                 qualified.$withBeanQualifier(declaredQualifier);
             }
             return bean;
-        } catch (DependencyInjectionException | DisabledBeanException | BeanInstantiationException e) {
+        } catch (DependencyInjectionException | DisabledBeanException |
+                 BeanInstantiationException e) {
             throw e;
         } catch (Throwable e) {
             if (!resolutionContext.getPath().isEmpty()) {
@@ -2434,7 +2271,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                     convertedValue = val;
                 } else {
                     convertedValue = conversionService.convert(val, requiredArgument).orElseThrow(() ->
-                            new BeanInstantiationException(resolutionContext, "Invalid bean argument [" + requiredArgument + "]. Cannot convert object [" + val + "] to required type: " + requiredArgument.getType())
+                        new BeanInstantiationException(resolutionContext, "Invalid bean argument [" + requiredArgument + "]. Cannot convert object [" + val + "] to required type: " + requiredArgument.getType())
                     );
                 }
                 convertedValues.put(argumentName, convertedValue);
@@ -2463,47 +2300,41 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         }
     }
 
-    private void processParallelBeans(List<BeanDefinitionProducer> parallelBeans) {
-        if (!eagerBeansEnabled || parallelBeans.isEmpty()) {
+    private void processParallelBeans() {
+        if (!eagerBeansEnabled) {
             return;
         }
-        List<BeanDefinitionProducer> finalParallelBeans = parallelBeans.stream()
-                .filter(p -> p.getReferenceIfEnabled(this) != null)
-                .toList();
-        if (!finalParallelBeans.isEmpty()) {
-            new Thread(() -> {
-                Collection<BeanDefinition<Object>> parallelDefinitions = new ArrayList<>();
-                finalParallelBeans.forEach(producer -> {
-                    try {
-                        loadEagerBeans(producer, parallelDefinitions);
-                    } catch (Throwable e) {
-                        BeanDefinitionReference<?> beanDefinitionReference = producer.getReferenceBestEffort();
-                        LOG.error("Parallel Bean definition [{}{}{}]", beanDefinitionReference == null ? "<ref discarded>" : beanDefinitionReference.getName(), MSG_COULD_NOT_BE_LOADED, e.getMessage(), e);
-                        boolean shutdownOnError = beanDefinitionReference != null &&
-                            beanDefinitionReference.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
-                        if (shutdownOnError) {
-                            stop();
-                        }
+        new Thread(() -> {
+            Iterable<BeanDefinition<Object>> parallelBeans = beanDefinitionProvider.getParallelBeans(this);
+            Collection<BeanDefinition<Object>> parallelDefinitions = new ArrayList<>(20);
+            parallelBeans.forEach(beanDefinition -> {
+                try {
+                    loadEagerBeans(beanDefinition, parallelDefinitions);
+                } catch (Throwable e) {
+                    LOG.error("Parallel Bean definition [{}{}{}]", beanDefinition.getName(), MSG_COULD_NOT_BE_LOADED, e.getMessage(), e);
+                    boolean shutdownOnError = beanDefinition.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
+                    if (shutdownOnError) {
+                        stop();
                     }
-                });
+                }
+            });
 
-                filterReplacedBeans(null, parallelDefinitions);
+            filterReplacedBeans(null, parallelDefinitions);
 
-                parallelDefinitions.forEach(beanDefinition -> ForkJoinPool.commonPool().execute(() -> {
-                    try {
-                        initializeEagerBean(beanDefinition);
-                    } catch (Throwable e) {
-                        LOG.error("Parallel Bean definition [{}{}{}]", beanDefinition.getName(), MSG_COULD_NOT_BE_LOADED, e.getMessage(), e);
-                        Boolean shutdownOnError = beanDefinition.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
-                        if (shutdownOnError) {
-                            stop();
-                        }
+            parallelDefinitions.forEach(beanDefinition -> ForkJoinPool.commonPool().execute(() -> {
+                try {
+                    initializeEagerBean(beanDefinition);
+                } catch (Throwable e) {
+                    LOG.error("Parallel Bean definition [{}{}{}]", beanDefinition.getName(), MSG_COULD_NOT_BE_LOADED, e.getMessage(), e);
+                    Boolean shutdownOnError = beanDefinition.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
+                    if (shutdownOnError) {
+                        stop();
                     }
-                }));
-                parallelDefinitions.clear();
+                }
+            }));
+            parallelDefinitions.clear();
 
-            }).start();
-        }
+        }).start();
     }
 
     private <T> void filterReplacedBeans(BeanResolutionContext resolutionContext, Collection<BeanDefinition<T>> candidates) {
@@ -2532,8 +2363,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         }
         for (BeanDefinition<T> replacementType : replacementTypes) {
             if (isNotTheSameDefinition(replacementType, definitionToBeReplaced) &&
-                    isNotProxy(replacementType, definitionToBeReplaced) &&
-                    checkIfReplaces(replacementType, definitionToBeReplaced, annotationMetadata)) {
+                isNotProxy(replacementType, definitionToBeReplaced) &&
+                checkIfReplaces(replacementType, definitionToBeReplaced, annotationMetadata)) {
                 return true;
             }
         }
@@ -2552,7 +2383,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     private <T> boolean isNotProxy(BeanDefinition<T> replacingCandidate, BeanDefinition<T> definitionToBeReplaced) {
         return !(replacingCandidate instanceof ProxyBeanDefinition &&
-                ((ProxyBeanDefinition<T>) replacingCandidate).getTargetDefinitionType() == definitionToBeReplaced.getClass());
+            ((ProxyBeanDefinition<T>) replacingCandidate).getTargetDefinitionType() == definitionToBeReplaced.getClass());
     }
 
     private <T> boolean checkIfReplaces(BeanDefinition<T> replacingCandidate, BeanDefinition<T> definitionToBeReplaced, AnnotationMetadata annotationMetadata) {
@@ -2570,7 +2401,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             if (qualifiedByNamed(definitionToBeReplaced, replacedBeanType, name)) {
                 if (LOG.isDebugEnabled()) {
                     LOG.debug("Bean [{}] replaces existing bean of type [{}] qualified by name [{}]",
-                            replacingCandidate.getBeanType(), definitionToBeReplaced.getBeanType(), name);
+                        replacingCandidate.getBeanType(), definitionToBeReplaced.getBeanType(), name);
                 }
                 return true;
             }
@@ -2582,7 +2413,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             if (qualifiedByQualifier(definitionToBeReplaced, replacedBeanType, qualifierClassValue)) {
                 if (LOG.isDebugEnabled()) {
                     LOG.debug("Bean [{}] replaces existing bean of type [{}] qualified by qualifier [{}]",
-                            replacingCandidate.getBeanType(), definitionToBeReplaced.getBeanType(), qualifierClassValue);
+                        replacingCandidate.getBeanType(), definitionToBeReplaced.getBeanType(), qualifierClassValue);
                 }
                 return true;
             }
@@ -2595,11 +2426,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             if (declaringType.isPresent()) {
                 Class<?> factoryClass = factory.get();
                 final boolean factoryReplaces = factoryClass == declaringType.get() &&
-                        checkIfTypeMatches(definitionToBeReplaced, annotationMetadata, replacedBeanType);
+                    checkIfTypeMatches(definitionToBeReplaced, annotationMetadata, replacedBeanType);
                 if (factoryReplaces) {
                     if (LOG.isDebugEnabled()) {
                         LOG.debug("Bean [{}] replaces existing bean of type [{}] in factory type [{}]",
-                                replacingCandidate.getBeanType(), replacedBeanType, factoryClass);
+                            replacingCandidate.getBeanType(), replacedBeanType, factoryClass);
                     }
                     return true;
                 }
@@ -2618,7 +2449,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                                              Class<T> replacedBeanType,
                                              AnnotationClassValue<?> qualifier) {
         @SuppressWarnings("unchecked") final Class<? extends Annotation> qualifierClass =
-                (Class<? extends Annotation>) qualifier.getType().orElse(null);
+            (Class<? extends Annotation>) qualifier.getType().orElse(null);
         if (qualifierClass != null && !qualifierClass.isAssignableFrom(Annotation.class)) {
             return Qualifiers.<T>byStereotype(qualifierClass).doesQualify(replacedBeanType, definitionToBeReplaced);
         } else {
@@ -2672,14 +2503,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         }
     }
 
-    private void loadEagerBeans(BeanDefinitionProducer producer, Collection<BeanDefinition<Object>> collector) {
-        BeanDefinitionReference<Object> reference = producer.getReferenceIfEnabled(this, null);
-        if (reference != null) {
-            BeanDefinition<Object> beanDefinition = reference.load(this);
-            try (BeanResolutionContext resolutionContext = newResolutionContext(beanDefinition, null)) {
-                if (beanDefinition.isEnabled(this, resolutionContext)) {
-                    collector.add(beanDefinition);
-                }
+    private void loadEagerBeans(BeanDefinition<Object> beanDefinition, Collection<BeanDefinition<Object>> collector) {
+        try (BeanResolutionContext resolutionContext = newResolutionContext(beanDefinition, null)) {
+            if (beanDefinition.isEnabled(this, resolutionContext)) {
+                collector.add(beanDefinition);
             }
         }
     }
@@ -2696,10 +2523,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             );
             for (BeanDefinition beanCandidate : beanCandidates) {
                 intializeEagerBean(
-                        null,
-                        beanCandidate,
-                        beanCandidate.asArgument(),
-                        beanCandidate.hasAnnotation(Context.class) ? null : beanDefinition.getDeclaredQualifier()
+                    null,
+                    beanCandidate,
+                    beanCandidate.asArgument(),
+                    beanCandidate.hasAnnotation(Context.class) ? null : beanDefinition.getDeclaredQualifier()
                 );
             }
 
@@ -2814,11 +2641,12 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     /**
      * Resolves the message to use for a disabled bean.
+     *
      * @param resolutionContext The resolution context
-     * @param beanType The bean type
-     * @param qualifier The qualifier
+     * @param beanType          The bean type
+     * @param qualifier         The qualifier
+     * @param <T>               The bean type
      * @return The message or null if none exists
-     * @param <T> The bean type
      */
     @Nullable
     protected <T> String resolveDisabledBeanMessage(BeanResolutionContext resolutionContext, Argument<T> beanType, Qualifier<T> qualifier) {
@@ -2866,8 +2694,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             resolutionContext,
             beanType,
             false,
-            null,
-            disabledBeans.values()
+            beanDefinitionProvider.getDisabledBeans(this).stream().<BeanDefinition<T>>mapMulti((disabledBean, consumer) -> {
+                if (disabledBean.isCandidateBean(beanType)) {
+                    consumer.accept((BeanDefinition<T>) disabledBean);
+                }
+            }).toList()
         ).stream()
             .sorted(Comparator.comparing(BeanDefinition::getName))
             .toList();
@@ -2900,11 +2731,11 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                                 .ifPresent(beanClass -> {
                                     messageBuilder.setLength(messageBuilder.length() - lineSeparator.length());
                                     resolveDisabledBeanMessage(linePrefix + " ",
-                                            messageBuilder,
-                                            lineSeparator,
-                                            resolutionContext,
-                                            Argument.of(beanClass),
-                                            null);
+                                        messageBuilder,
+                                        lineSeparator,
+                                        resolutionContext,
+                                        Argument.of(beanClass),
+                                        null);
                                     messageBuilder.append(lineSeparator);
                                 });
                         }
@@ -3069,9 +2900,9 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
         if (resolutionContext != null) {
             BeanResolutionContext.Segment<?, ?> currentSegment = resolutionContext
-                    .getPath()
-                    .currentSegment()
-                    .orElse(null);
+                .getPath()
+                .currentSegment()
+                .orElse(null);
             if (currentSegment != null) {
                 Argument<?> argument = currentSegment.getArgument();
                 CustomScope<?> customScope = customScopeRegistry.findDeclaredScope(argument).orElse(null);
@@ -3095,25 +2926,25 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                                                                   @NonNull BeanDefinition<T> definition) {
         BeanKey<T> beanKey = new BeanKey<>(definition.asArgument(), qualifier);
         T bean = registeredScope.getOrCreate(
-                new BeanCreationContext<T>() {
-                    @NonNull
-                    @Override
-                    public BeanDefinition<T> definition() {
-                        return definition;
-                    }
-
-                    @NonNull
-                    @Override
-                    public BeanIdentifier id() {
-                        return beanKey;
-                    }
-
-                    @NonNull
-                    @Override
-                    public CreatedBean<T> create() throws BeanCreationException {
-                        return createRegistration(resolutionContext == null ? null : resolutionContext.copy(), beanKey.beanType, qualifier, definition, true);
-                    }
+            new BeanCreationContext<T>() {
+                @NonNull
+                @Override
+                public BeanDefinition<T> definition() {
+                    return definition;
                 }
+
+                @NonNull
+                @Override
+                public BeanIdentifier id() {
+                    return beanKey;
+                }
+
+                @NonNull
+                @Override
+                public CreatedBean<T> create() throws BeanCreationException {
+                    return createRegistration(resolutionContext == null ? null : resolutionContext.copy(), beanKey.beanType, qualifier, definition, true);
+                }
+            }
         );
         return BeanRegistration.of(this, beanKey, definition, bean);
     }
@@ -3193,10 +3024,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         Optional beanDefinition = beanConcreteCandidateCache.get(bk);
         if (beanDefinition == null) {
             beanDefinition = findConcreteCandidateNoCache(
-                    resolutionContext,
-                    beanType,
-                    qualifier,
-                    throwNonUnique);
+                resolutionContext,
+                beanType,
+                qualifier,
+                throwNonUnique);
             beanConcreteCandidateCache.put(bk, beanDefinition);
         }
         return beanDefinition;
@@ -3216,12 +3047,17 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                                                                    @NonNull Argument<T> beanType,
                                                                    @Nullable Qualifier<T> qualifier) {
 
+        // TODO: Improve
+        List<BeanDefinition<Object>> targetProxyBeans = CollectionUtils.iterableToList(beanDefinitionProvider.getTargetProxyBeans(this));
         Collection<BeanDefinition<T>> candidates = collectBeanCandidates(
             resolutionContext,
             beanType,
             true,
-            null,
-            proxyTargetBeans
+            targetProxyBeans.stream().<BeanDefinition<T>>mapMulti((beanDefinition, consumer) -> {
+                if (beanDefinition.isCandidateBean(beanType)) {
+                    consumer.accept((BeanDefinition<T>) beanDefinition);
+                }
+            }).toList()
         );
         return pickOneBean(beanType, qualifier, false, candidates);
     }
@@ -3348,95 +3184,10 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         registerConversionService();
         initializeEventListeners();
         initializeTypeConverters();
-        initializeContext(
-            startupBeans.eagerInitBeans,
-            startupBeans.processedBeans,
-            startupBeans.parallelBeans
-        );
+        initializeContext();
     }
 
     protected void initializeTypeConverters() {
-    }
-
-    @NonNull
-    private StartupBeans readBeanDefinitionReferences() {
-        if (startupBeans == null) {
-
-            List<BeanDefinitionProducer> eagerInitBeans = new ArrayList<>(20);
-            List<BeanDefinitionProducer> processedBeans = new ArrayList<>(10);
-            List<BeanDefinitionProducer> parallelBeans = new ArrayList<>(10);
-
-            List<BeanDefinitionReference> beanDefinitionReferences = resolveBeanDefinitionReferences();
-
-            List<BeanDefinitionProducer> producers = new ArrayList<>(beanDefinitionReferences.size());
-            List<BeanDefinitionProducer> proxyTargetBeans = new ArrayList<>(beanDefinitionReferences.size());
-            for (BeanDefinitionReference beanDefinitionReference : beanDefinitionReferences) {
-                producers.add(new BeanDefinitionProducer(beanDefinitionReference));
-            }
-            beanDefinitionsClasses.addAll(producers);
-
-            Collection<BeanConfiguration> allConfigurations = beanConfigurations.values();
-            List<BeanConfiguration> configurationsDisabled = new ArrayList<>(allConfigurations.size());
-            for (BeanConfiguration bc : allConfigurations) {
-                if (!bc.isEnabled(this)) {
-                    configurationsDisabled.add(bc);
-                }
-            }
-
-            reference:
-            for (BeanDefinitionProducer beanDefinitionProducer : producers) {
-                if (beanDefinitionProducer.isDisabledOptimistic()) {
-                    continue;
-                }
-                BeanDefinitionReference beanDefinitionReference = beanDefinitionProducer.reference;
-                for (BeanConfiguration disableConfiguration : configurationsDisabled) {
-                    if (disableConfiguration.isWithin(beanDefinitionReference)) {
-                        beanDefinitionProducer.disable();
-                        continue reference;
-                    }
-                }
-
-                if (beanDefinitionReference.isProxiedBean()) {
-                    beanDefinitionProducer.disable();
-                    BeanDefinitionProducer proxyBeanProducer = new BeanDefinitionProducer(beanDefinitionReference);
-                    // retain only if proxy target otherwise the target is never used
-                    if (beanDefinitionReference.isProxyTarget()) {
-                        proxyTargetBeans.add(proxyBeanProducer);
-                    }
-                    continue;
-                }
-
-                for (Class<?> indexedType : beanDefinitionReference.getIndexes()) {
-                    resolveTypeIndex(indexedType).add(beanDefinitionProducer);
-                }
-                if (isEagerInit(beanDefinitionReference)) {
-                    eagerInitBeans.add(beanDefinitionProducer);
-                } else if (beanDefinitionReference.isParallel()) {
-                    parallelBeans.add(beanDefinitionProducer);
-                }
-                if (beanDefinitionReference.requiresMethodProcessing()) {
-                    processedBeans.add(beanDefinitionProducer);
-                }
-            }
-
-            this.beanDefinitionReferences = null;
-            this.beanConfigurationsList = null;
-
-            this.proxyTargetBeans.addAll(proxyTargetBeans);
-            startupBeans = new StartupBeans(eagerInitBeans, processedBeans, parallelBeans);
-        }
-        return startupBeans;
-    }
-
-    private boolean isEagerInit(BeanDefinitionReference<?> beanDefinitionReference) {
-        return beanDefinitionReference.isContextScope() ||
-                (eagerInitSingletons && beanDefinitionReference.isSingleton()) ||
-                (eagerInitStereotypesPresent && beanDefinitionReference.getAnnotationMetadata().hasDeclaredStereotype(eagerInitStereotypes));
-    }
-
-    @NonNull
-    private Collection<BeanDefinitionProducer> resolveTypeIndex(Class<?> indexedType) {
-        return beanIndex.computeIfAbsent(indexedType, COMPUTE_INDEXES_FN);
     }
 
     @SuppressWarnings("unchecked")
@@ -3658,8 +3409,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     private List<BeanRegistration> topologicalSort(Collection<BeanRegistration> beans) {
         Map<Boolean, List<BeanRegistration>> initial = beans.stream()
-                .sorted(Comparator.comparing(s -> s.getBeanDefinition().getRequiredComponents().size()))
-                .collect(Collectors.groupingBy(b -> b.getBeanDefinition().getRequiredComponents().isEmpty()));
+            .sorted(Comparator.comparing(s -> s.getBeanDefinition().getRequiredComponents().size()))
+            .collect(Collectors.groupingBy(b -> b.getBeanDefinition().getRequiredComponents().isEmpty()));
         List<BeanRegistration> sorted = new ArrayList<>(nullSafe(initial.get(true)));
         List<BeanRegistration> unsorted = new ArrayList<>(nullSafe(initial.get(false)));
         // Optimization which knows about types which are already in the sorted list
@@ -3686,9 +3437,9 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
                         continue;
                     }
                     if (unsatisfied.contains(clazz) || unsorted.stream()
-                            .map(BeanRegistration::getBeanDefinition)
-                            .map(BeanDefinition::getBeanType)
-                            .anyMatch(clazz::isAssignableFrom)) {
+                        .map(BeanRegistration::getBeanDefinition)
+                        .map(BeanDefinition::getBeanType)
+                        .anyMatch(clazz::isAssignableFrom)) {
                         found = true;
                         unsatisfied.add(clazz);
                         break;
@@ -3795,10 +3546,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
     void configureContextInternal() {
         if (configured.compareAndSet(false, true)) {
             readAllBeanConfigurations();
-            readBeanDefinitionReferences();
-        }
-        for (Class<?> indexType : KNOWN_INDEX_TYPE) {
-            resolveTypeIndex(indexType);
+            beanDefinitionProvider.initialize(this);
         }
     }
 
@@ -3979,7 +3727,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
      * Internal supplier of listeners.
      *
      * @param <T> The listener type
-     *
      * @author Denis Stepanov
      * @since 4.0.0
      */
@@ -3996,7 +3743,8 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
         Iterable<ListenerAndOrder<T>> get(@Nullable BeanResolutionContext beanResolutionContext);
 
         record ListenerAndOrder<T>(T bean, int order) implements Ordered {
-            @Override public int getOrder() {
+            @Override
+            public int getOrder() {
                 return order;
             }
         }
@@ -4074,7 +3822,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             }
             BeanKey<?> beanKey = (BeanKey<?>) o;
             return beanType.equalsType(beanKey.beanType) &&
-                    Objects.equals(qualifier, beanKey.qualifier);
+                Objects.equals(qualifier, beanKey.qualifier);
         }
 
         @Override
@@ -4126,7 +3874,7 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
             }
             BeanCandidateKey<?> beanKey = (BeanCandidateKey<?>) o;
             return beanType.equalsType(beanKey.beanType) &&
-                    Objects.equals(qualifier, beanKey.qualifier) && throwNonUnique == beanKey.throwNonUnique;
+                Objects.equals(qualifier, beanKey.qualifier) && throwNonUnique == beanKey.throwNonUnique;
         }
 
         @Override
@@ -4226,190 +3974,6 @@ public sealed class DefaultBeanContext implements ConfigurableBeanContext permit
 
     private static final class CollectionHolder<T> {
         Collection<BeanRegistration<T>> registrations;
-    }
-
-    /**
-     * Holds references to the startup beans.
-     * @param eagerInitBeans Eager init beans
-     * @param processedBeans Processed beans
-     * @param parallelBeans Parallel startup beans
-     */
-    private record StartupBeans(
-        List<BeanDefinitionProducer> eagerInitBeans,
-        List<BeanDefinitionProducer> processedBeans,
-        List<BeanDefinitionProducer> parallelBeans) {
-    }
-
-
-    /**
-     * The class adds the caching of the enabled decision + the definition instance.
-     * NOTE: The class can be accessed in multiple threads, we do allow for the fields to be possibly initialized concurrently - multiple times.
-     *
-     * @since 4.0.0
-     */
-    @Internal
-    static final class BeanDefinitionProducer {
-        private static final AtomicReferenceFieldUpdater<BeanDefinitionProducer, Object> DEFINITION_UPDATER =
-            AtomicReferenceFieldUpdater.newUpdater(BeanDefinitionProducer.class, Object.class, "definition");
-        private static final Object DEFINITION_DISABLED_SENTINEL = "";
-
-        /**
-         * Initially the reference, may be set to {@code null} by {@link #disable()} or if
-         * {@link #getReferenceIfEnabled} determines the ref is disabled.
-         */
-        @Nullable
-        @SuppressWarnings("java:S3077")
-        private volatile BeanDefinitionReference reference;
-        /**
-         * Initially {@code null}. If the {@link #reference} is enabled, and the definition from it
-         * is also enabled, this is set to the {@link BeanDefinition}. If the definition is
-         * disabled (either through conditions or explicitly by {@link #disable()}), this is set to
-         * {@link #DEFINITION_DISABLED_SENTINEL}.
-         */
-        @Nullable
-        @SuppressWarnings("java:S3077")
-        private volatile Object definition;
-
-        BeanDefinitionProducer(@NonNull BeanDefinitionReference reference) {
-            this.reference = reference;
-        }
-
-        private static boolean isReferenceEnabled(BeanDefinitionReference<?> ref, DefaultBeanContext context, BeanResolutionContext resolutionContext) {
-            if (ref == null) {
-                return false;
-            }
-            if (ref instanceof io.micronaut.context.AbstractInitializableBeanDefinitionAndReference<?> referenceAndDefinition) {
-                return referenceAndDefinition.isEnabled(context, resolutionContext, true);
-            }
-            return ref.isEnabled(context);
-        }
-
-        private static boolean isDefinitionEnabled(@NonNull DefaultBeanContext context,
-                                                   @Nullable BeanResolutionContext resolutionContext,
-                                                   @Nullable BeanDefinition<?> def) {
-            if (def == null) {
-                return false;
-            }
-            if (def instanceof io.micronaut.context.AbstractInitializableBeanDefinitionAndReference<?> definitionAndReference) {
-                return definitionAndReference.isEnabled(context, resolutionContext, false);
-            }
-            return def.isEnabled(context, resolutionContext);
-        }
-
-        /**
-         * Returns {@code true} if we know for sure that the definition is disabled
-         * ({@link #getDefinitionIfEnabled} is {@code null}). Note that even if this returns
-         * {@code false}, {@link #getDefinitionIfEnabled} may still return {@code null} in some
-         * cases.
-         *
-         * @return {@code true} if we know for sure that this definition is disabled
-         */
-        boolean isDisabledOptimistic() {
-            return reference == null || definition == DEFINITION_DISABLED_SENTINEL;
-        }
-
-        @Nullable
-        <T> BeanDefinitionReference<T> getReferenceIfEnabled(DefaultBeanContext context) {
-            return getReferenceIfEnabled(context, null);
-        }
-
-        @Nullable
-        <T> BeanDefinitionReference<T> getReferenceIfEnabled(DefaultBeanContext context, @Nullable BeanResolutionContext resolutionContext) {
-            BeanDefinitionReference ref = reference;
-            if (ref == null) {
-                return null;
-            }
-            if (isReferenceEnabled(ref, context, resolutionContext)) {
-                return ref;
-            } else {
-                this.reference = null;
-                return null;
-            }
-        }
-
-        /**
-         * Get the reference if it hasn't been discarded yet. It might still be disabled, though.
-         * This is used for logging.
-         *
-         * @return The reference, if it's still available
-         */
-        @Nullable
-        BeanDefinitionReference<?> getReferenceBestEffort() {
-            return reference;
-        }
-
-        @Nullable
-        <T> BeanDefinition<T> getDefinitionIfEnabled(DefaultBeanContext context) {
-            return getDefinitionIfEnabled(context, null, null, null);
-        }
-
-        /**
-         * Get the bean definition for this producer, if it's enabled.
-         *
-         * @param context           The context
-         * @param resolutionContext The resolution context (optional)
-         * @param beanType          The bean type this definition must match. This is checked before {@link BeanDefinition#isEnabled}, to avoid infinite loops
-         * @param predicate         The predicate this definition must match. This is checked before {@link BeanDefinition#isEnabled}, to avoid infinite loops
-         * @return The definition or {@code null} if it's disabled (or {@code beanType} or {@code predicate} did not match)
-         */
-        @Nullable
-        <T> BeanDefinition<T> getDefinitionIfEnabled(DefaultBeanContext context,
-                                                     @Nullable BeanResolutionContext resolutionContext,
-                                                     @Nullable Argument<T> beanType,
-                                                     @Nullable Predicate<BeanDefinition<T>> predicate) {
-            Object defObject = this.definition;
-            if (defObject != DEFINITION_DISABLED_SENTINEL && defObject != null) {
-                BeanDefinition<T> def = (BeanDefinition<T>) defObject;
-                if (beanType != null && !def.isCandidateBean(beanType)) {
-                    return null;
-                }
-                if (predicate != null && !predicate.test(def)) {
-                    return null;
-                }
-                return def;
-            }
-            BeanDefinitionReference<T> ref = getReferenceIfEnabled(context, resolutionContext);
-            if (ref == null) {
-                // shortcut for future calls
-                this.definition = DEFINITION_DISABLED_SENTINEL;
-                return null;
-            }
-            BeanDefinition def = ref.load(context);
-            if (beanType != null && !def.isCandidateBean(beanType)) {
-                return null;
-            }
-            if (predicate != null && !predicate.test(def)) {
-                return null;
-            }
-            if (isDefinitionEnabled(context, resolutionContext, def)) {
-                if (DEFINITION_UPDATER.compareAndSet(this, null, def)) {
-                    return def;
-                } else {
-                    defObject = this.definition;
-                    return defObject != DEFINITION_DISABLED_SENTINEL && defObject != null ? (BeanDefinition<T>) defObject : null;
-                }
-            } else {
-                this.definition = DEFINITION_DISABLED_SENTINEL;
-                return null;
-            }
-        }
-
-        <T> boolean isReferenceCandidateBean(Argument<T> beanType) {
-            // The reference needs to be assigned to a new variable as it can change between checks
-            BeanDefinitionReference ref = reference;
-            return ref != null && ref.isCandidateBean(beanType);
-        }
-
-        void disableIfMatch(BeanDefinitionReference<?> toDisable) {
-            if (Objects.equals(toDisable, this.reference)) {
-                disable();
-            }
-        }
-
-        void disable() {
-            this.reference = null;
-            this.definition = DEFINITION_DISABLED_SENTINEL;
-        }
     }
 
     private final class BeanContextUnsafeExecutionHandle extends BeanContextExecutionHandle implements UnsafeExecutionHandle<Object, Object> {
